# gomoku_search

./: .gitignore  .pre-commit-config.yaml  .style.yapf  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
alphagomoku/algos/mcts/: mcts.py  mcts_utils.py
alphagomoku/evaluators/: base_evaluator.py  heuristic_evaluator.py  sparse_evaluator.py
alphagomoku/experiment_logging/: base_logging_connector.py  wandb_connector.py
alphagomoku/game/: gomoku.py  gomoku_ui.py  gomoku_utils.py
alphagomoku/match/: gomoku_match.py
alphagomoku/match/scripts/: run_random_match.py
alphagomoku/players/: base_player.py  human_player.py  random_player.py
alphagomoku/players/scripts/: run_random_player.py
alphagomoku/rl_env/: env.py
alphagomoku/rl_env/scripts/: run_env.py
alphagomoku/tests/: README.md  test_env.py  test_evaluators.py  test_gomoku.py  test_gomoku_utils.py
