[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "research_env"
version = "0.1.0"
description = "A repo containing..."
readme = "README.md"
requires-python = "==3.12.*"

dependencies = [
    'debugpy',
    'matplotlib',
    'numpy',
    'pandas',
    'seaborn',
    'torch',
    'torchvision',
    'torchaudio',
    'pytorch-lightning',
    'wandb',
]

[project.optional-dependencies]
dev = [
    'ipython',
    'jupyter',
    'ipykernel',
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.pyright]
"reportOptionalMemberAccess" = "warning"
"reportGeneralTypeIssues" = "warning"

[tool.ruff]
line-length = 120
