[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alphagomoku"
version = "0.1"
description = "A repo for AlphaGo exploration in Gomoku"
readme = "README.md"
requires-python = "==3.12.*"

[tool.isort]
profile = "black"

[tool.pyright]
"reportOptionalMemberAccess" = "warning"
"reportGeneralTypeIssues" = "warning"

[tool.ruff]
line-length = 120
